[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/flowerpot.png" type="Texture" id=1]
[ext_resource path="res://Destructables/Descructable.gd" type="Script" id=2]
[ext_resource path="res://Destructables/leaf_blow.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.3
height = 1.16227

[node name="Descructable" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.0500011, 1.84797 )
shape = SubResource( 1 )

[node name="destruction" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 0.09
lifetime_randomness = 0.4
emission_shape = 2
emission_rect_extents = Vector2( 5.363, 3.552 )
direction = Vector2( 0, -0.5 )
spread = 30.0
gravity = Vector2( 0, 45 )
initial_velocity = 25.0
initial_velocity_random = 0.34
angular_velocity = 14.0
angular_velocity_random = 0.45
damping = 6.09
damping_random = 0.07
scale_amount = 2.0
color = Color( 0.596078, 0.396078, 0.301961, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="leaf_blow" type="CPUParticles2D" parent="."]
emitting = false
amount = 24
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 0.09
lifetime_randomness = 0.4
emission_shape = 2
emission_rect_extents = Vector2( 5.363, 3.552 )
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 45 )
initial_velocity = 36.09
initial_velocity_random = 0.34
angular_velocity = 25.04
angular_velocity_random = 0.45
damping = 46.52
damping_random = 0.07
scale_amount = 1.2
color = Color( 0.796078, 0.858824, 0.988235, 1 )
script = ExtResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_Timer_timeout"]
